--- a/index.html
+++ b/index.html
@@ -1,115 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="My Professional Resume">
-    <title>My Resume</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f9;
-            color: #333;
-        }
-        header {
-            background-color: #007bff;
-            color: white;
-            padding: 2rem 1rem;
-            text-align: center;
-        }
-        header h1 {
-            margin: 0;
-            font-size: 2.5rem;
-        }
-        header p {
-            font-size: 1.2rem;
-        }
-        .container {
-            max-width: 800px;
-            margin: 2rem auto;
-            padding: 0 1rem;
-        }
-        section {
-            margin-bottom: 2rem;
-        }
-        section h2 {
-            border-bottom: 2px solid #007bff;
-            padding-bottom: 0.5rem;
-            margin-bottom: 1rem;
-        }
-        ul {
-            list-style: none;
-            padding: 0;
-        }
-        ul li {
-            margin-bottom: 1rem;
-        }
-        ul li strong {
-            display: block;
-        }
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 1rem 0;
-        }
-    </style>
-</head>
-<body>
-
-<header>
-    <h1>Your Name</h1>
-    <p>Job Title | Contact Email | LinkedIn Profile</p>
-</header>
-
-<div class="container">
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Brief introduction about yourself, highlighting your career goals and achievements.</p>
-    </section>
-
-    <section id="experience">
-        <h2>Experience</h2>
-        <ul>
-            <li>
-                <strong>Job Title at Company Name</strong>
-                <span>MM/YYYY - Present</span>
-                <p>Brief description of your role and responsibilities. Highlight major achievements.</p>
-            </li>
-            <li>
-                <strong>Job Title at Another Company</strong>
-                <span>MM/YYYY - MM/YYYY</span>
-                <p>Brief description of your role and responsibilities. Highlight major achievements.</p>
-            </li>
-        </ul>
-    </section>
-
-    <section id="education">
-        <h2>Education</h2>
-        <ul>
-            <li>
-                <strong>Degree, Field of Study</strong>
-                <span>University Name, Graduation Year</span>
-            </li>
-        </ul>
-    </section>
-
-    <section id="skills">
-        <h2>Skills</h2>
-        <ul>
-            <li>Skill 1</li>
-            <li>Skill 2</li>
-            <li>Skill 3</li>
-        </ul>
-    </section>
-</div>
-
-<footer>
-    <p>&copy; 2024 Your Name. All rights reserved.</p>
-</footer>
-
-</body>
-</html>
+<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>cv_site</title><script defer="defer" src="/js/chunk-vendors.a9716edb.js"></script><script defer="defer" src="/js/app.d6a665c0.js"></script><link href="/css/app.7c6787de.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but cv_site doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
